--- a/frontend/src/pages/AboutPage.css
+++ b/frontend/src/pages/AboutPage.css
@@ -1,7 +1,7 @@
 .about-background {
   min-height: 100vh;
   width: 100vw;
-  background-image: url('/AboutUsBG.png'); /* Place your image in the public folder as background.jpg */
+  background-image: url('/HomePageBG.png'); /* Place your image in the public folder as background.jpg */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
